deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: options-cache-deployment
spec:
  replicas: 1 
  revisionhistorylimit: 2 
  selector:
    matchLabels:
      app: options-cache
  template:
    metadata:
      labels:
        app: options-cache
    spec:
      containers:
      - name: options-cache
        image: artifacts.tekuro.io/cache:5ab9f1ae245ebc6a078f7d719044747203fea159
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: regcred  # For pulling the image from a private registry
