deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: options-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: options-cache.tekuro.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: options-cache-service
                port:
                  number: 80
